fix visibility

--- a/dropdown/less/styles.less
+++ b/dropdown/less/styles.less
@@ -77,6 +77,9 @@ body {
         padding: 0 0 20px 0;
     }
 }
+.display {
+    visibility: visible;
+}
 .dropdown__select__list__item__label {
   font-weight: 600;  
   position: relative;
